# rust_wx_widgets

./: README.md  config.json  config.json.bak  re.xso  test_code.rs
wxWidgetsDll2/: wxWidgetsDll2.sln
wxWidgetsDll2/wxWidgetsDll2/: wxWidgetsDll2.cpp  wxWidgetsDll2.h  wxWidgetsDll2.vcxproj  wxWidgetsDll2.vcxproj.filters
wxWidgetsDll2Client/: wxWidgetsDll2Client.sln
wxWidgetsDll2Client/wxWidgetsDll2Client/: wxWidgetsDll2Client.cpp  wxWidgetsDll2Client.vcxproj  wxWidgetsDll2Client.vcxproj.filters
wx_widgets_rust/: Cargo.toml  build.rs
wx_widgets_rust/src/: code_generator.rs  code_generator1.rs  errors.rs  main.rs  main_frame.rs  utilities.rs  wx_code_generator.rs  wx_widgets.rs  wx_widgets_docs.rs  wx_widgets_docs_parser.rs  wx_widgets_if.rs  wx_widgets_source_parser.rs
